SONAR-26835 Migrate Gitlab provisioning task to Github Actions