@@ -48,7 +48,7 @@ public class GsonGroupTest {
 
     assertThat(groups).isNotNull();
     assertThat(groups.size()).isOne();
-    assertThat(groups.get(0).getId()).isEqualTo("123456789");
-    assertThat(groups.get(0).getFullPath()).isEqualTo("my-awesome-group/my-project");
+    assertThat(groups.getFirst().getId()).isEqualTo("123456789");
+    assertThat(groups.getFirst().getFullPath()).isEqualTo("my-awesome-group/my-project");
   }
 }
